--- a/shah/translations/ru_RU.json
+++ b/shah/translations/ru_RU.json
@@ -1,6 +1,6 @@
 {
   "17TFCN": "Поздравляем",
-  "Qsqy": "Вы успешно создали свой профиль. Теперь вы готовы продолжить свое путешествие в Origin Marketplace.",
+  "Qsqy": "Вы успешно создали свой профиль. Теперь вы готовы продолжить свое путешествие на Origin Marketplace.",
   "1IZ5ov": "Хорошо",
   "yzJlS": "ETH Адрес",
   "1SGynn": "Свяжитесь с {role}",
@@ -127,40 +127,40 @@
     "growth.three.attestations.requirement": "Верификация трех профилей",
     "growth.profile.requirement": "Имя и фотография в профиле",
     "growth.email.requirement": "Подтвержденный адрес электронной почты",
-    "growth.attestation.requirement.twitterAttestation": "Проверка Twitter",
-    "growth.attestation.requirement.facebookAttestation": "Проверка Facebook",
-    "growth.attestation.requirement.telegram": "Проверка telegram",
+    "growth.attestation.requirement.twitterAttestation": "Подтверждение Twitter",
+    "growth.attestation.requirement.facebookAttestation": "Подтверждение Facebook",
+    "growth.attestation.requirement.telegram": "Подтверждение Telegram",
     "growth.purchase.tshirt.title": "Купить футболку Origin с рисунком",
     "growth.purchase.tshirt.details": "Получите 25 OGN за каждую купленную футболку.",
     "growth.purchase.gc.title": "Купить подарочную карту Amazon на 25$",
     "growth.purchase.gc.details": "Заработайте 40 OGN за каждую купленную подарочную карту. Нужно будет использовать на сайте Amazon US.",
     "growth.purchase.charity.title": "Пожертвовать 100$ на благотворительность в GiveDirectly",
     "growth.purchase.charity.details": "Пожертвование будет сделано Origin от вашего имени.",
-    "growth.purchase.homerental.title": "Забронировать дом на озере Орта, Италия",
+    "growth.purchase.homerental.title": "Забронировать аренду дома на озере Орта, Италия",
     "growth.purchase.homerental.details": "Бронирование и проживание должно быть в мае.",
     "growth.purchase.experience.title": "Купите 2 годовых пропуска с полным доступом на мероприятия 3lau",
     "growth.purchase.experience.details": "Действительно в течение одного календарного года после покупки",
     "growth.purchase.art.title": "Купить портрет Vitalik AR от Тревора Джонса",
     "growth.purchase.art.details": "Доступен только 1 оригинал.",
-    "growth.purchase.listing624.title": "Забронировать квартиру в Сан-Франциско",
-    "growth.purchase.listing679.title": "Забронировать квартиру в Венеции, Италия",
+    "growth.purchase.listing624.title": "Забронировать апартаменты в Сан-Франциско",
+    "growth.purchase.listing679.title": "Забронировать апартаменты в Венеции, Италия",
     "growth.purchase.listing683.title": "Забронировать студию в Милане, Италия",
-    "growth.purchase.listing763.title": "Забронировать квартиру в Риме, Италия",
-    "growth.purchase.listing1556.title": "Забронировать квартиру в Пуэрто де ла Круз, Тенерифе",
-    "growth.purchase.listing2718.title": "Забронировать квартиру в Манеджио, Италия",
-    "growth.purchase.listing2237.title": "Забронировать квартиру в Ватикане, Италия",
-    "growth.purchase.listing2781.title": "Забронировать квартиру в Трастевере, Италия",
-    "growth.purchase.listing2783.title": "Забронируйте роскошную квартиру в Венеции, Италия",
-    "growth.purchase.listing335.title": "Купить Эфириум голограмма мультипликационного искусства",
+    "growth.purchase.listing763.title": "Забронировать апартаменты в Риме, Италия",
+    "growth.purchase.listing1556.title": "Забронировать апартаменты в Пуэрто де ла Круз, Тенерифе",
+    "growth.purchase.listing2718.title": "Забронировать апартаменты в Менаджо, Италия",
+    "growth.purchase.listing2237.title": "Забронировать апартаменты в Ватикане, Италия",
+    "growth.purchase.listing2781.title": "Забронировать апартаменты в Трастевере, Италия",
+    "growth.purchase.listing2783.title": "Забронировать роскошные апартаменты в Венеции, Италия",
+    "growth.purchase.listing335.title": "Купить анимационную голограмму Эфириум",
     "growth.purchase.listing297.title": "Купить ETH голограмму",
-    "growth.purchase.listing319.title": "Покупка ethEra и U",
-    "growth.purchase.listing320.title": "Покупка ethEra и Terra",
-    "growth.purchase.listing242.title": "Покупка ethEra, ограниченная серия",
-    "growth.purchase.listing289.title": "Покупка Медведь, ограниченная серия",
-    "growth.purchase.listing281.title": "Покупка сатоши, ограниченная серия",
+    "growth.purchase.listing319.title": "Купить ethEra и U",
+    "growth.purchase.listing320.title": "Купить ethEra и Terra",
+    "growth.purchase.listing242.title": "Купить ethEra, ограниченная серия",
+    "growth.purchase.listing289.title": "Купить The Bear, ограниченная серия",
+    "growth.purchase.listing281.title": "Купить Satoshi, ограниченная серия",
     "growth.purchase.listing450.title": "Купить Crypto Bull art",
     "growth.purchase.listing359.title": "Купить Ethereum art",
-    "growth.purchase.listing477.title": "Купите шапку ZoidPay",
+    "growth.purchase.listing477.title": "Купить шапку ZoidPay",
     "growth.purchase.listing254.title": "Купить футболку Origin с рисунком",
     "growth.purchase.listing255.title": "Купить рубашку HODL",
     "growth.purchase.listing2799.title": "Купить рубашку ETHCon Корея",
@@ -320,9 +320,7 @@
   "4qOByY": "заработанный",
   "3lytDE": "ЛУЧШЕЕ",
   "2dj9Ax": "Скачать приложение Origin Marketplace",
-  "4hEylD": "Origin Marketplace установлено",
   "2PC2yI": "Установите и пройдите 3 верификации чтобы заработать",
-  "3mbW6g": "Заработано",
   "14jidi": "Поделиться этим",
   "1jzK6G": "Кампании не найдены",
   "1bzhfq": "Активные кампании не найдены",
@@ -358,6 +356,10 @@
   "3tmHza": "Безымянный пользователь",
   "48NbPX": "Прочитайте больше",
   "1fBJTw": "Отправить",
+  "2EjJhq": "Вы не вошли в систему",
+  "2eOq3t": "Получите доступ к своим данным, подписавшись своим приватным ключом",
+  "2CPasx": "Загрузка...",
+  "136kFa": "Войти",
   "3KIuu2": "Вы приобрели список",
   "4Ey7Uc": "Предложение принято",
   "V0L4d": "Вы завершили транзакцию",
@@ -629,6 +631,8 @@
   "2haWvO": "Общий заработок",
   "1YUe0g": "Всего заработано",
   "2tRIOg": "Кампании не найдены",
+  "3Dcwum": "Origin Marketplace installed",
+  "acQDS": "Completed",
   "2JJkHr": "Вы заработали {amount} OGN",
   "1dhANo": "Подписаться на Origin",
   "1RMzAE": "Вернуться к Кампании",
@@ -751,7 +755,6 @@
   "47VMoo": "Перейдите на сайт Airbnb, отредактируйте свой профиль и вставьте следующий текст в описание профиля:",
   "aHvny": "Копировать",
   "4ppTCb": "Нажмите «Продолжить», после того как введете код подтверждения в свой профиль Airbnb.",
-  "2CPasx": "Загрузка...",
   "r8uEJ": "Введите корректный электронный адрес",
   "2v9K0Q": "Укажите адрес вашей электронной почты",
   "3MWhEl": "Проверьте свой адрес электронной почты",
@@ -827,6 +830,7 @@
   "4zUJH3": "Недостаточно токенов Origin",
   "4Ed2iA": "Недостаточно токенов OKB. {=Get More}",
   "4DOKEk": "Получить больше",
+  "3as9PZ": "Not enough Tether",
   "49t4a6": "Недостаточно средств",
   "2t43zy": "Где можно купить?",
   "2nApoY": "Комиссия",
@@ -961,6 +965,9 @@
   "349RB": "Соединен с",
   "4j25sQ": "Активный кошелек",
   "2owL8m": "Прокси Аккаунт",
+  "3YmlkH": "Профиль не создан",
+  "1ADqpg": "Создать профиль",
+  "2wdn8N": "Баланс кошелька",
   "fTgqa": {
     "*": "Ожидающие подтверждения блокчейна",
     "_1": "Ожидание подтверждения блокчейна"
@@ -1009,18 +1016,12 @@
     "_1": "уведомление"
   },
   "1NaRKF": "Посмотреть все",
-  "3YmlkH": "No profile created",
-  "1ADqpg": "Create a Profile",
-  "2wdn8N": "Wallet balances",
   "RTtVv": "Подождите, пока мы загружаем твою личность...",
   "1IuKjr": "Безымянный пользователь",
   "48V5Jr": "Защищенность профиля - {percent}",
   "36t26D": "Зарабатывайте OGN",
   "tHJmL": "Баланс кошелька",
-  "3WKB6S": "Sign Out",
-  "2EjJhq": "You're not signed in",
-  "2eOq3t": "Get secure access to your data by signing with your private key",
-  "136kFa": "Sign In",
+  "3WKB6S": "Выйти",
   "2NvVVm": "Покупатель:",
   "s1yRf": "Продавец:",
   "4xWP3l": "{nameLink} отклонил ваше предложение {title}",
@@ -1094,7 +1095,7 @@
   "3JfvSq": "Да! Запишите меня",
   "wcJnW": "Нет, спасибо",
   "29ZJOe": "Получить награды",
-  "2JzFg1": "Sign In",
+  "2JzFg1": "Войти",
   "4iVrWM": "Загрузка",
   "4apdzo": "Рекламировать сейчас",
   "1o5hKC": "Пожалуйста, введите сумму комиссии",
@@ -1140,6 +1141,7 @@
   "1kwp9A": "Сервер GraphQL",
   "1uARmt": "Сервер обмена сообщениями",
   "CekKD": "Пространство имен обмена сообщениями",
+  "439xvd": "Auth Server",
   "28zT3p": "Режим работы",
   "1gHMka": "Экран Консоли",
   "Dg7k9": "Прокси Аккаунты",
@@ -1347,8 +1349,10 @@
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Токен Origin",
   "1w0kdV": "Токен OKB",
+  "3mFmPe": "Tether",
   "3JTZtf": "Эфир хорош для краткосрочных сделок.",
   "3eoCca": "Maker DAI подходит для долгосрочных объявлений - например, аренда или продажа собственности.",
   "214S0w": "Полезно для продвижения других объявлений",
-  "4nb5Gu": "Для использования одним из наших биржевых партнеров"
+  "4nb5Gu": "Для использования одним из наших биржевых партнеров",
+  "21iAlm": "Tether is good for long term listings like rentals or property sales."
 }
