--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -320,9 +320,7 @@
   "4qOByY": "已获得",
   "3lytDE": "特点",
   "2dj9Ax": "下载 Origin Marketplace 应用 app",
-  "4hEylD": "Origin Marketplace 已下载",
   "2PC2yI": "下载并且完成3个验证来获得",
-  "3mbW6g": "已获得",
   "14jidi": "分享这个",
   "1jzK6G": "未找到任何奖励活动",
   "1bzhfq": "未找到正在进行的奖励活动",
@@ -358,6 +356,10 @@
   "3tmHza": "未命名用户",
   "48NbPX": "了解更多",
   "1fBJTw": "发送",
+  "2EjJhq": "You're not signed in",
+  "2eOq3t": "Get secure access to your data by signing with your private key",
+  "2CPasx": "加载中...",
+  "136kFa": "Sign In",
   "3KIuu2": "您购买了一个列表",
   "4Ey7Uc": "你接受了出价",
   "V0L4d": "你完成了一笔交易",
@@ -513,16 +515,16 @@
   "1Q7JQv": "单击日历以输入价格和可订日期。要选择两天以上，请单击开始日期然后单击结束日期。",
   "46VzsL": "是",
   "24izZl": "不是",
-  "3CrBYS": "上市地点",
-  "4b2VMF": "这是清单上当前设置的位置。",
+  "3CrBYS": "列表地点",
+  "4b2VMF": "这是列表上当前设置的位置。",
   "2qv5nR": "修改位置",
   "ISDa8": "看起来不错",
-  "iolRY": "您的商家信息在哪里？",
-  "3BUseb": "主街123号",
+  "iolRY": "您的列表具体地址是什么？",
+  "3BUseb": "Main Street123号",
   "3JJckg": "使用当前位置",
   "1LKg3s": "提取位置",
   "SNWO6": "下一步",
-  "Q3OY5": "这将显示给潜在的客人。调整地图使您的清单位于圆圈内。为了您的隐私，请不要过于精确。",
+  "Q3OY5": "这将显示给潜在的客人。调整地图使您的列表项目位于圆圈内。为了您的隐私，请不要过于精确。",
   "1ydkJH": "继续",
   "1BpZMF": "默认平日价格{=(Sunday - Thursday nights)}",
   "3G6qlx": "（周日至周四晚上）",
@@ -629,6 +631,8 @@
   "2haWvO": "总收入",
   "1YUe0g": "赚取总额",
   "2tRIOg": "目前没有奖励活动",
+  "3Dcwum": "Origin Marketplace installed",
+  "acQDS": "Completed",
   "2JJkHr": "您已赚取{amount}OGN",
   "1dhANo": "关注Origin",
   "1RMzAE": "返回奖励活动",
@@ -751,7 +755,6 @@
   "47VMoo": "访问爱彼迎网站，编辑您的个人资料并将以下粘贴下到自我介绍的框里：",
   "aHvny": "复制",
   "4ppTCb": "在您的爱彼迎个人资料中输入确认代码后继续。",
-  "2CPasx": "加载中...",
   "r8uEJ": "请输入有效的邮箱地址",
   "2v9K0Q": "您的电邮地址是什么？",
   "3MWhEl": "确认你的邮件地址",
@@ -827,6 +830,7 @@
   "4zUJH3": "不够Origin代币（OGN)",
   "4Ed2iA": "OKB代币不足。 {=Get More}",
   "4DOKEk": "获取更多",
+  "3as9PZ": "Not enough Tether",
   "49t4a6": "余额不足",
   "2t43zy": "在哪里可以得到一些？",
   "2nApoY": "委任",
@@ -852,7 +856,7 @@
   "4BR6ev": "另外一个买家已为此商品列表出价。",
   "2H9umQ": "不可用",
   "4gzHi7": "该列表目前不可用",
-  "8kJRE": "通过...推广您的商家信息",
+  "8kJRE": "使用以下推广您的商家信息：",
   "1voSMo": "获得更多的曝光并更快地销售。",
   "4u4ITL": "立即推广",
   "1uOQBZ": "如何获得OGN",
@@ -882,7 +886,7 @@
   "JsYWH": "关于卖家",
   "31xap2": "卖家",
   "2msHsu": "换 {token}",
-  "gOdBz": "点击下面的以太坊代币兑换为 {token}",
+  "gOdBz": "点击下面将以太坊代币兑换为 {token}",
   "WJo6H": "已将 {eth}  ETH 兑换成为 {tokenValue} ",
   "1Aj4HH": "请授权Origin代表您移动 {token}",
   "1NGwwh": "批准 {token}",
@@ -890,7 +894,7 @@
   "4gGbfA": "批准",
   "48zmKx": "你已经对此商品表示感兴趣并出价。你的出价将在几秒钟后显示。你支付的 ETH 已经被存入到智能合约中的托管。",
   "1uk7Ue": "查看订单详情",
-  "3Qm76M": "现在Origin可能会代表您移动 {token}",
+  "3Qm76M": "现在Origin可代表您移动 {token}",
   "2zkwns": "支付金额",
   "2TwLaC": "支付方式",
   "AgJy7": "这个卖方接受",
@@ -961,6 +965,9 @@
   "349RB": "连接到",
   "4j25sQ": "活跃钱包",
   "2owL8m": "代理账户",
+  "3YmlkH": "No profile created",
+  "1ADqpg": "Create a Profile",
+  "2wdn8N": "Wallet balances",
   "fTgqa": {
     "*": "待批的区块链确认",
     "_1": "待区块链确认"
@@ -1009,18 +1016,12 @@
     "_1": "通知"
   },
   "1NaRKF": "查看全部",
-  "3YmlkH": "No profile created",
-  "1ADqpg": "Create a Profile",
-  "2wdn8N": "Wallet balances",
   "RTtVv": "请稍候，我们正在加载您的身份...",
   "1IuKjr": "未命名的用户",
   "48V5Jr": "账户优点-{percent}",
   "36t26D": "赚钱OGN",
   "tHJmL": "钱包余额",
   "3WKB6S": "Sign Out",
-  "2EjJhq": "You're not signed in",
-  "2eOq3t": "Get secure access to your data by signing with your private key",
-  "136kFa": "Sign In",
   "2NvVVm": "买方:",
   "s1yRf": "卖方:",
   "4xWP3l": "{nameLink} 拒绝了你的出价 {title}",
@@ -1139,13 +1140,14 @@
   "nqaAu": "Relayer服务器",
   "1kwp9A": "GraphQL 服务器",
   "1uARmt": "消息传递密钥服务器",
-  "CekKD": "Messaging Namespace",
+  "CekKD": "消息命名空间",
+  "439xvd": "Auth Server",
   "28zT3p": "性能模式",
   "1gHMka": "屏幕控制台",
   "Dg7k9": "代理账号",
   "1o6gS2": "继电器",
   "3T1Coy": "禁止入职",
-  "29rDip": "Disable Offer Events (for Messaging)",
+  "29rDip": "禁止买家提出购买事件（用于消息传递）",
   "ZegcV": "恢复默认设置",
   "pT9j": "托管中",
   "NrhOS": "已释放",
@@ -1346,9 +1348,11 @@
   "2tAdFF": "以太币（Ethereum）",
   "3M0Mkc": "Maker Dai",
   "3NuPlb": "Origin 代币",
-  "1w0kdV": "OKB Token",
+  "1w0kdV": "OKB代币",
+  "3mFmPe": "Tether",
   "3JTZtf": "Ether适用于短期列表。",
   "3eoCca": "Maker Dai 适用于长期的商品或服务列表，例如房屋租赁和房地产销售。",
   "214S0w": "有助于推广其他商品",
-  "4nb5Gu": "For use with one of our exchange partners"
+  "4nb5Gu": "与我们的交易所合作伙伴之一一起使用",
+  "21iAlm": "Tether is good for long term listings like rentals or property sales."
 }
