--- a/shah/translations/it_IT.json
+++ b/shah/translations/it_IT.json
@@ -1,10 +1,10 @@
 {
-  "4yVU8h": "Congratulations!",
-  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
-  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
-  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
-  "3Hxe9H": "Collect OGN",
-  "iQsez": "Earn OGN",
+  "4yVU8h": "Congratulazioni!",
+  "1ZxYLz": "Hai creato con successo il tuo profilo. Ora puoi raccogliere i tuoi token Origin.",
+  "3EmcrW": "Hai creato con successo il tuo profilo. Ora puoi iniziare a guadagnare i tuoi Origin Rewards.",
+  "3F5LRH": "Hai creato correttamente il tuo profilo. Ora sei pronto per continuare il tuo viaggio nel marketplace di Origin.",
+  "3Hxe9H": "Colleziona OGN",
+  "iQsez": "Guadagna OGN",
   "1IZ5ov": "Ok",
   "yzJlS": "Indirizzo ETH",
   "1SGynn": "Contatta {role}",
@@ -104,7 +104,7 @@
   "2idJzM": "L'icona Metamask si trova in alto a destra nella barra degli strumenti del browser.",
   "32hLtQ": "Congratulazioni! Ora puoi inviare messaggi ad altri utenti su Origin e rimanere aggiornato su tutti i tuoi acquisti e vendite.",
   "AACIs": "Hai finito e puoi continuare premendo il pulsante qui sotto.",
-  "VoLV1": {
+  "4rLaB4": {
     "growth.jan2019.name": "Campagna di Gennaio 2019",
     "growth.jan2019.short_name": "Gen 2019",
     "growth.feb2019.name": "Campagna di Febbraio 2019",
@@ -129,9 +129,11 @@
     "growth.nov2019.short_name": "Novembre 2019",
     "growth.dec2019.name": "Campagna di Dicembre 2019",
     "growth.dec2019.short_name": "Dicembre 2019",
+    "growth.jan2020.name": "Campagna di Gennaio 2020",
+    "growth.jan2020.short_name": "Gennaio 2020",
     "growth.profile.and.email.requirement": "Email e profilo Origin verificati",
     "growth.two.attestations.requirement": "Tre verifiche del profilo",
-    "growth.three.attestations.requirement": "Four profile verifications",
+    "growth.three.attestations.requirement": "Quattro verifiche del profilo",
     "growth.profile.requirement": "Nome e foto del profilo",
     "growth.email.requirement": "Email verificata",
     "growth.attestation.requirement.twitterAttestation": "Conferma Twitter",
@@ -291,21 +293,48 @@
     "growth.share.content20.title": "Il fondatore di CoinList discute sui mercati decentralizzati del futuro",
     "growth.share.content20.details": "Andy Bromberg, cofondatore e presidente di CoinList, discute su ciò che pensa di Origin e sulla nostra visione a lungo termine.",
     "growth.share.content20.link": "Guarda il video",
-    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.title": "Costruito su Origin: un'alternativa decentralizzata a Shopify",
     "growth.share.content21.details": "Siamo orgogliosi di annunciare il nuovo e-commerce di Origin, un'alternativa decentralizzata ed open source a Shopify, ospitata completamente su IPFS.",
     "growth.share.content21.link": "Leggi l'articolo",
-    "growth.share.content22.title": "How an Early YouTube Employee is Competing Against Uber and Airbnb",
-    "growth.share.content22.details": "Our very own Matthew Liu chats with Ahmed Al-Balaghi, Co-founder of Encrypted Podcast.",
+    "growth.share.content22.title": "Come uno dei primi dipendenti di YouTube è in competizione con Uber e Airbnb",
+    "growth.share.content22.details": "Il nostro Matthew Liu parla con Ahmed Al-Balaghi, cofondatore di Encrypted Podcast.",
     "growth.share.content22.link": "Guarda il video",
-    "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
+    "growth.share.content23.title": "Annuncio delle Origin Commissions per promuovere le Inserzioni dei Venditori con OGN",
     "growth.share.content23.details": "Origin Commissions: Un modo nuovo per i venditori per incrementare le loro vendite e per gli sviluppatori della DApp e gli affiliati di guadagnare Origin Tokens.",
     "growth.share.content23.link": "Leggi l'articolo",
-    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
-    "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content24.title": "Paul Veradittakit di Pantera Capital su Come Origin rende possibile la libertà",
+    "growth.share.content24.details": "Incontra Paul, Co-investment Officer presso Pantera Capital.",
     "growth.share.content24.link": "Guarda il video",
-    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
-    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
-    "growth.share.content25.link": "Guarda il video"
+    "growth.share.content25.title": "Joey Krug Co-fondatore di Augur spiega il valore di Origin",
+    "growth.share.content25.details": "Joey Krug Co-fondatore di Augur & Co-investment Officer presso Pantera Capital, spiega il valore di Origin.",
+    "growth.share.content25.link": "Guarda il video",
+    "growth.share.content26.title": "Investitori di livello mondiale sono convinti che Origin possa rivoluzionare l'economia della condivisione",
+    "growth.share.content26.details": "Origin ha più di 500 investitori in tutto il mondo che la sostengono nella visione di abilitare il vero commercio peer to peer.",
+    "growth.share.content26.link": "Guarda il video",
+    "growth.share.content27.title": "Fortune Magazine's Balancing the Ledger with Origin's Founders",
+    "growth.share.content27.details": "In questa intervista con Fortune Magazine, i fondatori di Origin discutono della loro visione volta a creare una sharing economy veramente decentralizzata.",
+    "growth.share.content27.link": "Guarda il video",
+    "growth.share.content28.title": "Un fondatore di YouTube e investitore in Origin discute dei punti di forza del Team di Origin",
+    "growth.share.content28.details": "Steve Chen, co-fondatore di YouTube spiega i punti di forza del Team Origin.",
+    "growth.share.content28.link": "Guarda il video",
+    "growth.share.content29.title": "Il cofondatore di PayPal e primo ingegnere di Youtube parla del suo lavoro in Origin",
+    "growth.share.content29.details": "Incontra Yu Pan: cofondatore di PayPal, primo ingegnere di YouTube e ora ingegnere capo di Ricerca e Sviluppo in Origin.",
+    "growth.share.content29.link": "Guarda il video",
+    "growth.share.content30.title": "Paul Veradittakit di Pantera Capital su Come Origin rende possibile la libertà",
+    "growth.share.content30.details": "Incontra Paul, Co-investment Officer presso Pantera Capital.",
+    "growth.share.content30.link": "Guarda il video",
+    "growth.share.content31.title": "Il futuro della Sharing Economy",
+    "growth.share.content31.details": "Origin sta costruendo il futuro della Sharing Economy.",
+    "growth.share.content31.link": "Guarda il video",
+    "growth.share.content32.title": "Segui Origin su Blockfolio Signal!",
+    "growth.share.content32.details": "Segui Origin su Blockfolio e ricevi gli aggiornamenti e gli airdrops OGN dal core team di Origin. ",
+    "growth.share.content32.link": "Segui Origin",
+    "growth.share.content33.title": "Entra nel gruppo Telegram di Origin e guadagna OGN",
+    "growth.share.content33.details": "Segui Origin su Telegram e guadagna Origin Token (OGN)!",
+    "growth.share.content33.link": "Segui Origin",
+    "growth.share.content34.title": "Creando La nuova Sharing Economy",
+    "growth.share.content34.details": "Origin ha creato un protocollo per marketplace decentralizzato basato sulla rete ethereum che sostituisce gli intermediari e collega acquirenti e venditori tramite uno smart contract.",
+    "growth.share.content34.link": "Segui Origin"
   },
   "3eD99i": "Verifica il tuo indirizzo email",
   "1hBrwm": "Aggiungi il nome e la foto al profilo",
@@ -342,7 +371,7 @@
   "4qOByY": "Guadagnato",
   "3lytDE": "IN PRIMO PIANO",
   "2dj9Ax": "Scarica l'app di Origin Marketplace",
-  "3mDuJu": "Install & complete 4 verifications.",
+  "3mDuJu": "Installa e completa 4 verifiche.",
   "14jidi": "Condividi questo",
   "1jzK6G": "Nessuna campagna rilevata",
   "1bzhfq": "Nessuna campagna attiva trovata",
@@ -654,7 +683,7 @@
   "1YUe0g": "Totale guadagnato",
   "2tRIOg": "Nessuna campagna rilevata",
   "3Dcwum": "Origin Marketplace installato",
-  "Nuz99": "Partner Referral",
+  "Nuz99": "Referral partner",
   "acQDS": "Completato",
   "2JJkHr": "Hai guadagnato {amount} OGN",
   "1dhANo": "Segui Origin",
@@ -663,9 +692,9 @@
   "2LLInS": "Completato",
   "2iDrtJ": "Unisciti a me su Origin e guadagna i token Cryptocurrency Origin (OGN). Origin è un nuovo mercato per comprare e vendere con altri utenti. Guadagna Origin Token quando crei il tuo profilo, invita i tuoi amici e compra e vendi sul mercato.",
   "1gCRzk": "Unisciti a me su Origin e guadagna i token Cryptocurrency Origin (OGN). Origin è un nuovo mercato per comprare e vendere con altri utenti. Guadagna Origin Token quando crei il tuo profilo, invita i tuoi amici e compra e vendi sul mercato.",
-  "4nBI5l": "Invita con il tuo codice",
-  "3YOP9G": "Invia ad un amico il tuo codice di invito unico.",
-  "1AY43w": "Copia codice",
+  "1URGr": "Invite with Your Link",
+  "1JZLkm": "Send a friend your unique invitation link.",
+  "2FPhdN": "Copy Link",
   "1IIvYE": "Copiato",
   "20US5L": "Copia",
   "3yCrcG": "Condividi o Tweet",
@@ -757,7 +786,7 @@
   "157nkC": "L'OGN guadagnato verrà distribuito alla fine di ogni campagna. OGN è attualmente bloccato per l'utilizzo sulla piattaforma Origin e non può essere trasferito. Si prevede che OGN sarà sbloccato e trasferibile in futuro.",
   "4weJUD": "Partecipando al programma di premi Origin, l'utente accetta che non trasferirà o venderà i futuri gettoni Origin guadagnati ad altri per almeno 1 anno dalla data di conseguimento dei token.",
   "4vRJSg": "L'OGN è stato emesso in una transazione originariamente esentata dalla registrazione ai sensi del Securities Act statunitense del 1933, come modificato (il \"Securities Act\"), e non può essere trasferita negli Stati Uniti a, o per conto o beneficio di, qualsiasi persona US esclusa in virtù di un'esenzione disponibile dai requisiti di registrazione della Legge sui valori mobiliari e tutte le leggi applicabili sui titoli di Stato. I termini usati in precedenza hanno il significato loro attribuito nella Regulation S ai sensi della Securities Act e tutte le leggi e i regolamenti applicabili.",
-  "1oPDxX": "I am not a citizen or resident of the United States of America",
+  "1oPDxX": "Non sono cittadino o residente negli Stati Uniti d'America",
   "1c8jIG": "Accetto i termini e le condizioni",
   "3ARgQ2": "Oops, {country} non è ammesso",
   "1gZxpn": "Sfortunatamente, sembra che tu sia attualmente in un paese in cui i regolamenti governativi non ti consentono di partecipare alle campagne di Origin.",
@@ -1113,7 +1142,7 @@
   "2dbJQ2": "Non sarai in grado di guadagnare OGN su Origin, ma puoi comunque verificare il tuo profilo.",
   "BfHYB": "Sono sicuro",
   "eXPPI": "No, aspetta",
-  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
+  "2sDCiE": "Ci sei quasi! Iscriviti per iniziare a guadagnare i tuoi token.",
   "2vReMp": "Guadagna Token Origin (OGN) rafforzando il tuo profilo e completando le attività nel Marketplace Origin.",
   "3JfvSq": "Sì! Iscrivimi",
   "wcJnW": "No grazie",
