--- a/shah/translations/ja_JP.json
+++ b/shah/translations/ja_JP.json
@@ -104,7 +104,7 @@
   "2idJzM": "メタマスクアイコンは、ブラウザのツールバーの右上にあります。",
   "32hLtQ": "おめでとうございます。 Originのユーザーへメッセージを送る事ができるようになりました。取引に関する情報も最新にキープされます。",
   "AACIs": "下のボタンを押すと完了です。",
-  "VoLV1": {
+  "4rLaB4": {
     "growth.jan2019.name": "2019年1月キャンペーン",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月キャンペーン",
@@ -129,6 +129,8 @@
     "growth.nov2019.short_name": "2019年11月",
     "growth.dec2019.name": "December 2019 Campaign",
     "growth.dec2019.short_name": "December 2019",
+    "growth.jan2020.name": "January 2020 Campaign",
+    "growth.jan2020.short_name": "January 2020",
     "growth.profile.and.email.requirement": "確認済みのメールアドレスとOriginのプロフィール",
     "growth.two.attestations.requirement": "3つのプロファイル検証",
     "growth.three.attestations.requirement": "Four profile verifications",
@@ -305,7 +307,34 @@
     "growth.share.content24.link": "動画を見る",
     "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
     "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
-    "growth.share.content25.link": "動画を見る"
+    "growth.share.content25.link": "動画を見る",
+    "growth.share.content26.title": "World-class investors believe Origin will disrupt the sharing economy",
+    "growth.share.content26.details": "Originには、真のP2Pコマースを実現するというビジョンをサポートする、500人以上の投資家が世界中にいます。",
+    "growth.share.content26.link": "動画を見る",
+    "growth.share.content27.title": "Fortune Magazine's Balancing the Ledger with Origin's Founders",
+    "growth.share.content27.details": "In this interview with Fortune Magazine, Origin's founders discuss their vision for creating a truly decentralized sharing economy.",
+    "growth.share.content27.link": "動画を見る",
+    "growth.share.content28.title": "YouTube Founder and Origin Investor Discusses Strength of Origin Team",
+    "growth.share.content28.details": "Youtubeの共同創設者であるSteve Chen氏が、Originの強みについて語りました。",
+    "growth.share.content28.link": "動画を見る",
+    "growth.share.content29.title": "PayPal Cofounder & First YouTube Engineer Talks About His Work at Origin",
+    "growth.share.content29.details": "Meet Yu Pan: PayPal's Co-founder, first YouTube engineer and now lead R&D engineer at Origin.",
+    "growth.share.content29.link": "動画を見る",
+    "growth.share.content30.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content30.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
+    "growth.share.content30.link": "動画を見る",
+    "growth.share.content31.title": "The Future of the Sharing Economy",
+    "growth.share.content31.details": "Origin is building the future of the sharing economy.",
+    "growth.share.content31.link": "動画を見る",
+    "growth.share.content32.title": "Follow Origin on Blockfolio Signal!",
+    "growth.share.content32.details": "Follow Origin on Blockfolio and receive the latest news updates and OGN airdrops from Origin's core team. ",
+    "growth.share.content32.link": "Follow Origin",
+    "growth.share.content33.title": "Originチームに参加してOGNをゲットしよう！",
+    "growth.share.content33.details": "Follow Origin on Telegram and earn Origin Tokens (OGN)!",
+    "growth.share.content33.link": "Follow Origin",
+    "growth.share.content34.title": "Creating the New Sharing Economy",
+    "growth.share.content34.details": "Originは分散型マーケットプレイスプロトコルをEthereumメインネット上に構築しました。これは、買い手と売り手をスマートコントラクトで結び付けられる、仲介業者が不要なマーケットプレイスです。",
+    "growth.share.content34.link": "Follow Origin"
   },
   "3eD99i": "メールアドレスを認証してください",
   "1hBrwm": "プロフィールに名前と写真を追加してください",
@@ -663,9 +692,9 @@
   "2LLInS": "完了",
   "2iDrtJ": "Originに参加して、Origin暗号通貨トークン（OGN）を獲得してください。 Originは他のユーザーと売買する新しい市場です。あなたのプロフィールを作成し、あなたの友人を招待し、そして市場で売買すると、Originトークンを獲得できます。",
   "1gCRzk": "Originに参加して、Origin暗号通貨トークン（OGN）を獲得してください。 Originは他のユーザーと売買する新しい市場です。あなたのプロフィールを作成し、あなたの友人を招待し、そして市場で売買すると、Originトークンを獲得できます。",
-  "4nBI5l": "コードを使って招待する",
-  "3YOP9G": "あなたの友人をコード経由で招待しましょう！",
-  "1AY43w": "コピーコード",
+  "1URGr": "Invite with Your Link",
+  "1JZLkm": "Send a friend your unique invitation link.",
+  "2FPhdN": "Copy Link",
   "1IIvYE": "コピーしました",
   "20US5L": "コピーする",
   "3yCrcG": "共有またはツイート",
